themes/Amano/css/grid.css
.wrapper {
  margin-left: auto;
  margin-right: auto;
  width: 960px;
}
.wrapper header {
  height: 30px;
}
.wrapper header #main {
  background-color: #333333;
  height: 100%;
  width: 200px;
}
.wrapper header #main ul {
  padding-top: 5px;
}
.wrapper header #main ul li {
  float: left;
  margin-left: 10px;
}
.wrapper #page {
  margin-top: 20px;
  padding: 20px;
}
#home {
  width: 100%;
  height: 100%;
}
#home img {
  position: absolute;
  top: 0px;
  left: 0px;
  z-index: -1;
  width: 100%;
  height: 100%;
}
#home .text {
  position: absolute;
  height: 260px;
  width: 760px;
  margin: -170px 0px 0px -420px;
  padding: 40px;
  top: 50%;
  left: 50%;
  border: 5px double #000000;
  font-size: 50px;
  line-height: 54px;
}

